plugins {
    id 'java'
}

group 'blue.sparse'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    flatDir { dir "versions" }
}

dependencies {
    compile name: "spigot-1.8"
    compile name: "spigot-1.8.3"
    compile name: "spigot-1.8.8"
    compile name: "spigot-1.9.2"
    compile name: "spigot-1.9.4"
    compile name: "spigot-1.10.2"
    compile name: "spigot-1.11.2"
    compile name: "spigot-1.12"
    compile name: "spigot-1.12.1"
    compile name: "spigot-1.12.2"
}

task copyToPlugins(type: Copy) {
    into("../.test-server/plugins")
    from tasks.withType(Jar)
}

jar {
    jar.archiveName = "${project.name}.jar"
}